--- a/styles/index.css
+++ b/styles/index.css
@@ -1,9 +1,12 @@
+ @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@800&display=swap');
+
 section{
     height: 100vh;
 }
 
 section:nth-child(1){
     background-color: yellow;
+    background-image: url(https://images.unsplash.com/photo-1626814026160-2237a95fc5a0?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
 }
 section:nth-child(2){
     background-color: orange;
@@ -30,4 +33,60 @@ section:nth-child(5){
 }
 .login_container button{
     padding: 10px 20px;
+}
+
+.main_search_container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+.main_search_container h1{
+    font-size: 100px;
+    color: white;
+    text-shadow: 0 0 2px black, 0 0 2px black, 0 0 2px black, 0 0 2px black, 0 0 2px black, 0 0 2px black, 0 0 2px black, 0 0 2px black, 0 0 5px black, 0 0 5px black, 0 0 5px black, 0 0 5px black, 0 0 5px black, 0 0 5px black;
+}
+
+.main_search_container p:nth-of-type(1){
+    font-size: 50px;
+    font-family: 'Nanum Gothic', sans-serif;
+    color: white;
+    text-align: center;
+    text-shadow: 0 0 5px black, 0 0 5px black, 0 0 5px black, 0 0 5px black, 0 0 5px black, 0 0 5px black;
+}
+
+.main_search_container p:nth-of-type(2){
+    font-size: 36px;
+    font-family: 'Nanum Gothic', sans-serif;
+    color: white;
+}
+
+.main_search_container p:nth-of-type(3){
+    font-size: 24px;
+    font-family: 'Nanum Gothic', sans-serif;
+    color: white;
+}
+
+.main_search_container form{
+    width: 30%;
+    height: 50px;
+    display: grid;
+    grid-template-columns: 70% 30%;
+}
+
+#search{
+    text-indent: 1em;
+}
+
+#search+button{
+    background-color: red;
+    border: none;
+    color: white;
+    font-family: 'Nanum Gothic', sans-serif;
+}
+
+#search:focus::placeholder{
+    color: red;
 }
