--- a/styles/index.css
+++ b/styles/index.css
@@ -13,6 +13,7 @@ section:nth-child(2){
 }
 section:nth-child(3){
     background-color: black;
+    color: white;
 }
 section:nth-child(4){
     background-color: gray;
@@ -89,4 +90,86 @@ section:nth-child(5){
 
 #search:focus::placeholder{
     color: red;
+}
+
+section:nth-child(2){
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.tabs_container{
+    width: 50%;
+}
+
+.tabs_container button{
+    padding: 20px 30px;
+}
+
+.tabs_container .tab_contents > div{
+    height: 200px;
+    background-color: pink;
+    display: none;
+}
+
+/* .tabs_container .tab_contents > div:nth-child(1){
+    display: block;
+} */
+
+.tabs_container>button:nth-child(1):hover~.tab_contents>div:nth-child(1){
+    display: block;
+}
+.tabs_container>button:nth-child(2):hover~.tab_contents>div:nth-child(2){
+    display: block;
+}
+.tabs_container>button:nth-child(3):hover~.tab_contents>div:nth-child(3){
+    display: block;
+}
+.tab_contents>div{
+    display: none;
+    height: 200px;
+    background-color: gray;
+}
+
+section:nth-child(3) input:nth-child(1):checked ~.tab_contents>div:nth-child(1){
+    display: block;
+}
+section:nth-child(3) input:nth-child(2):checked ~.tab_contents>div:nth-child(2){
+    display: block;
+}
+section:nth-child(3) input:nth-child(3):checked ~.tab_contents>div:nth-child(3){
+    display: block;
+}
+
+.tabs_form{
+    width: 50%;
+}
+
+section:nth-child(3){
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+section:nth-child(3) input[name="btn"]{
+    display: none;
+}
+
+section:nth-child(3) label{
+    padding: 10px 20px;
+    display: inline-block;
+    border: 1px solid white;
+    border-radius: 10px 10px 0 0;
+}
+
+section:nth-child(3) input:nth-child(1):checked ~ label:nth-of-type(1){
+    background-color: red;
+}
+
+section:nth-child(3) input:nth-child(2):checked ~ label:nth-of-type(2){
+    background-color: red;
+}
+
+section:nth-child(3) input:nth-child(3):checked ~ label:nth-of-type(3){
+    background-color: red;
 }
