git pull, table 디자인

--- a/styles/index.css
+++ b/styles/index.css
@@ -173,3 +173,22 @@ section:nth-child(3) input:nth-child(2):checked ~ label:nth-of-type(2){
 section:nth-child(3) input:nth-child(3):checked ~ label:nth-of-type(3){
     background-color: red;
 }
+
+.table_container{
+    display: flex;
+    align-items: center;
+}
+
+.table_container table{
+    width: 50%;
+    margin: auto;
+    height: 400px;
+}
+
+.table_container tr:nth-child(2n){
+    background-color: lavender;
+}
+
+.table_container tr:nth-child(2n+1){
+    background-color: pink;
+}
