table section 완성

--- a/styles/index.css
+++ b/styles/index.css
@@ -177,11 +177,17 @@ section:nth-child(3) input:nth-child(3):checked ~ label:nth-of-type(3){
 .table_container{
     display: flex;
     align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    gap: 20px;
+}
+
+.table_container h2{
+    font-size: 50px;
 }
 
 .table_container table{
     width: 50%;
-    margin: auto;
     height: 400px;
 }
 
